# quark_engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/html/: _animation_8h_source.html  _awake_behaviour_8h_source.html  _behaviour_8h_source.html  _camera_8h_source.html  _camera_controller_8h_source.html  _color_8h_source.html  _common_8h_source.html  _component_8h_source.html  _core_module_8h_source.html  _core_object_8h_source.html  _fbx_load_8h_source.html  _light_8h_source.html  _main_window_8h_source.html  _material_8h_source.html  _memory_allocate_8h_source.html  _mesh_8h_source.html  _mesh_filter_8h_source.html  _mesh_renderer_8h_source.html  _object_8h_source.html  _pipeline_8h_source.html  _quark_object_8h_source.html  _quark_string_8h_source.html  _quark_window_8h_source.html  _quark_window_event_8h_source.html  _render_object_8h_source.html  _render_texture_8h_source.html  _renderer_8h_source.html  _resource_8h_source.html  _resource_object_8h_source.html  _scene_8h_source.html  _scene_manager_8h_source.html  _script_behaviour_8h_source.html  _shader_8h_source.html  _shader_load_8h_source.html  _texture_8h_source.html  _texture_load_8h_source.html  _transform_8h_source.html  _vulkan_buffer_8h_source.html  _vulkan_device_8h_source.html  _vulkan_object_8h_source.html  (+209 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  (+26 more)
engine/: CMakeLists.txt
engine/core/: Animation.cpp  Animation.h  Behaviour.cpp  Behaviour.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Common.h  Component.cpp  Component.h  CoreModule.h  CoreObject.h  Input.cpp  Input.h  Light.cpp  Light.h  Material.cpp  Material.h  MemoryAllocate.h  Mesh.cpp  Mesh.h  MeshFilter.cpp  MeshFilter.h  MeshRenderer.cpp  MeshRenderer.h  Object.cpp  Object.h  Pipeline.cpp  Pipeline.h  QuarkObject.cpp  QuarkObject.h  QuarkString.cpp  QuarkString.h  RenderObject.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Resource.cpp  (+16 more)
engine/render/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanObject.cpp  VulkanObject.h  VulkanTexture.cpp  VulkanTexture.h  VulkanThreadPool.h  VulkanTools.cpp  VulkanTools.h
engine/resource/: FbxLoad.cpp  FbxLoad.h  ResourceObject.h  ShaderLoad.cpp  ShaderLoad.h  TextureLoad.cpp  TextureLoad.h
media/config/: menu.txt
media/shader/: standard.bat  standard.frag  standard.frag.spv  standard.shader  standard.vert  standard.vert.spv
quark/: AwakeBehaviour.cpp  AwakeBehaviour.h  CMakeLists.txt  CameraController.cpp  CameraController.h  EditModule.cpp  EditModule.h  EditObject.h  EditWindow.cpp  EditWindow.h  MainWindow.cpp  MainWindow.h  QuarkWindow.cpp  QuarkWindow.h  QuarkWindowEvent.cpp  QuarkWindowEvent.h  SceneWindow.cpp  SceneWindow.h  main.cpp
(+307 files in other folders)
